Change top header background to green with white text, and fixed indendation/spacing on index.html

--- a/main.css
+++ b/main.css
@@ -17,7 +17,6 @@ article, aside, details, figcaption, figure, footer, header, main, nav, section,
     display: block;
 }
 
-/* remember to define focus styles! */
 :focus {
 	outline: 0;
 }
@@ -81,7 +80,12 @@ nav button {
 	font-weight: 400;
 }
 
+.header-top {
+	background-color: #516a4c;
+}
+
 .header-top ul li {
+	color: #ffffff;
 	padding: 1%;
 	display: block
 }
